--- a/index.css
+++ b/index.css
@@ -1,78 +1,121 @@
-*{box-sizing: border-box;}
 body{
-    background-color: white;
-    background-image: url(./FNB-First-National-Bank-New-2022-900x0.png);
+    width: 100%;
+    background-image: url(./R.png);
     background-repeat: no-repeat;
-    background-position:center;
+    background-position: center;
     background-attachment: fixed;
-    /* background-size:100%; */
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    width: 100%;
-    font-size: 300%;
+    background-size: 170%;
 }
-#fnb{
-    margin-top: -4%;
-    background-color: rgb(10, 152, 149);
+    *{box-sizing: border-box;}
+#div1{
+    width: 105%;
+    /* overflow-x: hidden; */
+    display: grid;
+    grid-template-columns: 70% 10% 10%;
+    column-gap: 5%;
+    padding-top: 5%;
+    box-shadow: 12px 12px 12px black;
     position: sticky;
-    top: 0;
-    /* background-color: white; */
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
+    top: -1%;
+    left: -1%;
+    background-color: white;
 }
-#logo{
-    width: 100%;
-    /* margin-left: 17%; */
-    margin-top: -1%;
+#img1{
+    margin-left: -4%;
+    width: 40%;
+    margin-top: -6%;
+}
+#icon1,#icon2{
+   font-size: 500%; 
+   /* margin-left: -100%; */
+   /* margin-bottom: 50%; */
+   margin-top: 4%;
+}
+#div2{
+    color: white;
+    background-color: rgb(13, 166, 177);
+    width: 105%;
+    padding: 2%;
+    margin-top: -19%;
+    transition-duration: 2s;
+}
+/* #icon1:hover{
+    margin-top: 25%;
+} */
+#p4{
+    font-size: 350%;
+    text-align: center;
+    font-family: 'charm';
 }
 #contact-form{
-    /* display: flex; */
-    /* flex-flow: row wrap; */
-    align-items: center;
-    border-radius: 40px;
-    /* width: 90%;
-    padding: 2.5%;
-    margin: 5%; */
-    padding-bottom: 5%;
-    padding-top: 5%;
-    /* border: 2px solid #eee;
-    background-color: #eee; */
-
+    width: 105%;
+    margin-top: 20%;
+    padding: 3%;
+    margin-bottom: 5%;
 }
 #contact-form label{
-    margin: 60px 10px 10px 0;
+    font-size: 300%;
 }
 #contact-form input{
+    border-radius: 25px;
     outline: none;
-    font-size: 100%;
+    border: 2px solid #ccc;
+    margin-bottom: 15%;
+    font-size: 250%;
+    padding: 5%;
     width: 100%;
-    margin: 10px 10px 60px 0;
-    padding: 20px;
-    border: 1px solid #ccc;
 }
-img{
+#surname{
+    margin-top: -7%;
+}
+#img2{
     width: 100%;
 }
 #p1{
-    font-family: 'Charm';
-    font-size: 40%;
-    /* font-family: italic; */
+    width: 100%;
+    font-size: 250%;
+    padding: 3%;
+    font-family: 'charm';
+    font-weight: bolder;
+    background-color: rgb(13, 166, 177);
+    color: black;
 }
-#p2{
-    font-family: 'Charm';
-    font-size: 40%;
+
+#p2, #p3{
+    font-size: 200%;
+    font-family: 'charm';
+    font-weight: bolder;
+}
+#terms{
+    border-radius: 25px;
+    border: 2px solid #bbb;
+    display: grid;
+    grid-template-columns: 20% 80%;
+    padding: 3%;
+}
+#terms input[type='checkbox']{
+    background-color: rgb(13, 166, 177);
+    color: rgb(13, 166, 177);
+    margin-top: 3%;
+    /* font-size: 200%; */
+    width: 40%;
+    height: 80px;
+}
+#terms > label{
+    margin-top: 3%;
 }
 input[type='submit']{
-    color: black;
+    color: white;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
-    font-size: 100%;
-    background-color: #fff;
-    width: 50%;
-    margin-left: 25%;
-    margin-top: 15%;
-    margin-bottom: -1%;
+    font-size: 300%;
+    background-color: rgb(13, 166, 177);
+    width: 100%;
+    /* margin-left: 25%; */
+    margin-top: 10%;
+    margin-bottom: 3%;
     border-radius: 15px;
-    padding: 3%;
+    padding: 10%;
     position: relative;
     /* animation-name: done; */
     animation-duration: 3s;
@@ -154,7 +197,9 @@ input[type='submit']{
     }
 
 }
-input[type='submit']:active{
-    color: red;
+input[type='submit']:hover{
+    color: rgb(13, 166, 177);
+    background-color: rgb(235, 187, 27);
     /* background-color: rgb(64, 248, 8); */
 }
+
